Change from Pair<Product, Float> to ScoreProduct.